modified styles to prevent text from overflow

--- a/src/components/FileIcon/FileIcon.module.css
+++ b/src/components/FileIcon/FileIcon.module.css
@@ -13,3 +13,12 @@
 	width: 70%;
 	height: 70%;
 }
+
+.fileIcon p {
+	width: 80%;
+	max-width: 80%;
+	max-height: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
